# Crabby

./: Cargo.toml  Makefile  README.md  test.sh
benches/: testing.rs
src/: board.rs  evaluation.rs  lib.rs  main.rs  print.rs  table.rs  uci.rs  util.rs
